--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@analogjs/vite-plugin-angular": "^1.14.1",
+    "@angular/animations": "19.2.2",
     "@angular/cdk": "^19.2.3",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
