--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,13 +48,13 @@ jobs:
 
       # Upload artifacts for deployment job
       - name: Upload backend build
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: backend-build
           path: backend/dist
 
       - name: Upload frontend build
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: frontend-build
           path: frontend/dist
@@ -66,31 +66,37 @@ jobs:
 
     steps:
       - name: Download backend build
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: backend-build
           path: backend-build
 
       - name: Download frontend build
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: frontend-build
           path: frontend-build
 
       - name: Set up SSH
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          echo "${{ secrets.SSH_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
+          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
 
       - name: Deploy to DigitalOcean
+        env:
+          SSH_USER: ${{ secrets.SSH_USER }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
         run: |
           # Transfer backend files
-          rsync -avz --delete backend-build/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/concert-poster-marketplace/backend/dist/
+          rsync -avz --delete backend-build/ $SSH_USER@$SSH_HOST:/var/www/concert-poster-marketplace/backend/dist/
 
           # Transfer frontend files
-          rsync -avz --delete frontend-build/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/concert-poster-marketplace/frontend/dist/
+          rsync -avz --delete frontend-build/ $SSH_USER@$SSH_HOST:/var/www/concert-poster-marketplace/frontend/dist/
 
           # Run deployment script
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'cd /var/www/concert-poster-marketplace && ./deploy.sh'
+          ssh $SSH_USER@$SSH_HOST 'cd /var/www/concert-poster-marketplace && ./deploy.sh'
