--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
-    "diffEditor.codeLens": true
+    "diffEditor.codeLens": true,
+    "cSpell.words": [
+        "jambase"
+    ]
 }
