--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "dist/server.js",
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@trpc/server": "^11.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -12,11 +14,14 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "superjson": "^2.2.2",
+    "zod": "^3.24.2",
+    "@concert-poster-marketplace/shared": "file:../shared"
   },
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon --watch src --ext ts --exec \"node --import ./custom-loader.mjs src/server.ts\"",
     "build": "tsc",
     "test": "jest",
     "lint": "eslint --ext .ts src/",
@@ -29,7 +34,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.13.11",
+    "@types/node": "^20.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0",
