--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,15 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/postcss": "^4.0.15",
+    "@trpc/client": "^11.0.2",
+    "@trpc/server": "^11.0.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
+    "superjson": "^2.2.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@concert-poster-marketplace/shared": "file:../shared"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.4",
