--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "main": "dist/server.js",
   "dependencies": {
+    "@aws-sdk/s3-request-presigner": "^3.782.0",
+    "@concert-poster-marketplace/shared": "file:../shared",
     "@prisma/client": "^6.5.0",
     "@trpc/server": "^11.0.2",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -13,11 +16,12 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
+    "multer-s3": "^3.0.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "superjson": "^2.2.2",
-    "zod": "^3.24.2",
-    "@concert-poster-marketplace/shared": "file:../shared"
+    "zod": "^3.24.2"
   },
   "scripts": {
     "start": "node dist/server.js",
@@ -34,6 +38,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
