--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -34,7 +34,10 @@
                 "output": "assets"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "src/styles.scss",
+              "node_modules/bs-stepper/dist/css/bs-stepper.min.css"
+            ],
             "scripts": [
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
