added additional seed data

--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,9 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio"
   },
+  "prisma": {
+    "seed": "node --loader ts-node/esm ./prisma/seed.mjs"
+  },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
