--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,27 +6,12 @@
     "configurations": [
         {
             "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}/frontend/src/app/components/login/login.component.ts",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Debug Express Server",
-            "skipFiles": ["<node_internals>/**"],
-            "program": "${workspaceFolder}/backend/src/server.ts",
-            "runtimeArgs": ["-r", "ts-node/register"],
-            "outFiles": ["${workspaceFolder}/**/*.js"],
-            "runtimeExecutable": "node",
+            "request": "attach",
+            "name": "Attach to Backend",
+            "port": 9229,
             "restart": true,
-            "console": "integratedTerminal"
+            "skipFiles": ["<node_internals>/**"],
+            "sourceMaps": true
         }
     ]
 }
