updated deploy yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,9 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
-  test-and-build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,66 +15,28 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: "18"
           cache: "npm"
 
-      # Backend steps
-      - name: Install backend dependencies
-        working-directory: ./backend
-        run: npm ci
-
-      - name: Run backend tests
-        working-directory: ./backend
-        run: npm test
-
-      - name: Build backend
-        working-directory: ./backend
-        run: npm run build
-
-      # Frontend steps
+      # Build frontend
       - name: Install frontend dependencies
         working-directory: ./frontend
         run: npm ci
-
-      - name: Run frontend tests
-        working-directory: ./frontend
-        run: echo "Skipping frontend tests for now"
 
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
 
-      # Upload artifacts for deployment job
-      - name: Upload backend build
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-build
-          path: backend/dist
+      # Build backend
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: npm ci
 
-      - name: Upload frontend build
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-build
-          path: frontend/dist
+      - name: Build backend
+        working-directory: ./backend
+        run: npm run build
 
-  deploy:
-    needs: test-and-build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download backend build
-        uses: actions/download-artifact@v4
-        with:
-          name: backend-build
-          path: backend-build
-
-      - name: Download frontend build
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-build
-          path: frontend-build
-
+      # Deploy
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.7.0
         with:
@@ -93,10 +53,10 @@ jobs:
           SSH_HOST: ${{ secrets.SSH_HOST }}
         run: |
           # Transfer backend files
-          rsync -avz --delete backend-build/ $SSH_USER@$SSH_HOST:/var/www/concert-poster-marketplace/backend/dist/
+          rsync -avz --delete backend/dist/ $SSH_USER@$SSH_HOST:/var/www/concert-poster-marketplace/backend/dist/
 
           # Transfer frontend files
-          rsync -avz --delete frontend-build/ $SSH_USER@$SSH_HOST:/var/www/concert-poster-marketplace/frontend/dist/
+          rsync -avz --delete frontend/dist/ $SSH_USER@$SSH_HOST:/var/www/concert-poster-marketplace/frontend/dist/
 
-          # Run deployment script
-          ssh $SSH_USER@$SSH_HOST 'cd /var/www/concert-poster-marketplace && ./deploy.sh'
+          # Execute deployment script on server
+          ssh $SSH_USER@$SSH_HOST 'cd /var/www/concert-poster-marketplace && bash deploy.sh'
