--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -196,13 +196,14 @@ jobs:
           SSH_USER: ${{ secrets.SSH_USER }}
           SSH_HOST: ${{ secrets.SSH_HOST }}
         run: |
-          ssh $SSH_USER@$SSH_HOST 'sudo bash -c "cat > /etc/nginx/sites-available/tubebazaar.com << EOF
+          # Create Nginx config file locally first
+          cat > nginx.conf << 'EOF'
           server {
               listen 80;
               server_name tubebazaar.com;
               
               # Redirect HTTP to HTTPS
-              return 301 https://\$host\$request_uri;
+              return 301 https://$host$request_uri;
           }
 
           server {
@@ -221,9 +222,9 @@ jobs:
               location /trpc/ {
                   proxy_pass http://127.0.0.1:4000/trpc/;
                   proxy_http_version 1.1;
-                  proxy_set_header Host \$host;
-                  proxy_set_header X-Real-IP \$remote_addr;
-                  proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                  proxy_set_header Host $host;
+                  proxy_set_header X-Real-IP $remote_addr;
+                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               }
 
               # API uploads endpoint
@@ -235,7 +236,7 @@ jobs:
               # Frontend static files - FIXED
               location / {
                   root /var/www/concert-poster-marketplace/frontend/dist;
-                  try_files \$uri \$uri/ /index.html =404;
+                  try_files $uri $uri/ /index.html =404;
                   index index.html;
               }
               
@@ -244,7 +245,16 @@ jobs:
                   return 404;
               }
           }
-          EOF"'
+          EOF
+
+          # Transfer the file to server
+          scp nginx.conf $SSH_USER@$SSH_HOST:/tmp/nginx.conf
+
+          # Move it to the correct location
+          ssh $SSH_USER@$SSH_HOST 'sudo mv /tmp/nginx.conf /etc/nginx/sites-available/tubebazaar.com'
+
+          # Enable it if not already enabled
+          ssh $SSH_USER@$SSH_HOST 'sudo ln -sf /etc/nginx/sites-available/tubebazaar.com /etc/nginx/sites-enabled/'
 
           # Test and reload Nginx
           ssh $SSH_USER@$SSH_HOST 'sudo nginx -t && sudo systemctl reload nginx'
