--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -66,7 +66,8 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": true
             },
             "development": {
               "optimization": false,
