--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,6 +23,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "serviceWorker": true,
             "assets": [
               {
                 "glob": "**/*",
@@ -67,7 +68,8 @@
                 }
               ],
               "outputHashing": "all",
-              "optimization": true
+              "optimization": true,
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
