--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "build:prod": "ng build --configuration production && npm run ngsw-config",
+    "ngsw-config": "node update-ngsw-config.js"
   },
   "private": true,
   "dependencies": {
@@ -17,9 +19,11 @@
     "@angular/compiler": "^19.2.6",
     "@angular/core": "^19.2.6",
     "@angular/forms": "^19.2.6",
+    "@angular/localize": "^19.2.6",
     "@angular/platform-browser": "^19.2.6",
     "@angular/platform-browser-dynamic": "^19.2.6",
     "@angular/router": "^19.2.6",
+    "@angular/service-worker": "^19.2.6",
     "@concert-poster-marketplace/shared": "file:../shared",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
