--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           # For Angular applications
           if [ -f "angular.json" ]; then
-            npm run build -- --configuration=production --base-href=/
+            npm run build:prod --base-href=/
           else
             # For other frameworks
             npm run build
