--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "^19.2.6",
     "@angular/core": "^19.2.6",
     "@angular/forms": "^19.2.6",
+    "@angular/google-maps": "^19.2.9",
     "@angular/localize": "^19.2.6",
     "@angular/platform-browser": "^19.2.6",
     "@angular/platform-browser-dynamic": "^19.2.6",
@@ -30,6 +31,7 @@
     "@tailwindcss/postcss": "^4.0.15",
     "@trpc/client": "^11.0.2",
     "@trpc/server": "^11.0.2",
+    "@types/google.maps": "^3.58.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "bs-stepper": "^1.7.0",
