--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "multer-s3": "^3.0.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
+    "stripe": "^18.0.0",
     "superjson": "^2.2.2",
     "zod": "^3.24.2"
   },
