--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@concert-poster-marketplace/shared": "file:../shared",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
+    "@stripe/stripe-js": "^7.1.0",
     "@tailwindcss/postcss": "^4.0.15",
     "@trpc/client": "^11.0.2",
     "@trpc/server": "^11.0.2",
