--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "bs-stepper": "^1.7.0",
+    "dayjs": "^1.11.13",
     "rxjs": "~7.8.0",
     "superjson": "^2.2.2",
     "tslib": "^2.3.0",
